# dicom-nlquery

./: .gitignore  CHANGELOG.md  README.md  agent_tools.py  config-test.yaml  config.yaml  pyproject.toml
configs/: lexicon.en-US.yaml  lexicon.pt-BR.yaml
scripts/: README.md  integration_vllm_smoke.py  manual_search_cli.py  nlquery_move_study.py  run_agent.py
src/dicom_nlquery/: __init__.py  agent.py  agent_tools.py  cli.py  config.py  confirmation.py  dicom_client.py  dicom_search.py  lexicon.py  llm_client.py  logging_config.py  matcher.py  mcp_client.py  models.py  nl_parser.py  node_registry.py  normalizer.py  rag_bridge.py  resolver.py  search_pipeline.py  search_utils.py
src/dicom_nlquery/api/: __init__.py  core.py
tests/: README.md  conftest.py  docker-compose.yml  orthanc.configuration.json
tests/integration/: conftest.py  test_end_to_end.py  test_execute_search_rewriting.py  test_orthanc_search.py
tests/integration/fixtures/: generate_dicoms.py
tests/unit/: test_age_calculator.py  test_agent_confirmation.py  test_agent_run.py  test_agent_tools.py  test_cli.py  test_config.py  test_confirmation.py  test_dicom_search.py  test_guardrails.py  test_json_extractor.py  test_lexicon.py  test_llm_client.py  test_logging_config.py  test_matcher.py  test_mcp_client.py  test_mcp_manifest.py  test_models.py  test_nl_parser.py  test_node_registry.py  test_normalizer.py  test_placeholder.py  test_ranking.py  test_resolver.py  test_search_pipeline.py  test_search_pipeline_rag.py  test_search_pipeline_telemetry.py  test_search_utils.py  test_timeout.py
